[package]
name = "qbutton-pi"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
edition = "2021"
description = "Service to send Google Assistant commands in response to 433 MHz RF codes."
license = "Apache-2.0"
repository = "https://github.com/qwandor/qbutton-pi"
keywords = ["rf", "433mhz", "googleassistant"]
categories = ["network-programming"]

[dependencies]
cc1101 = { version = "0.1.3", features = ["std"] }
embedded-hal-bus = { version = "0.2.0", features = ["std"] }
eyre = "0.6.12"
futures = "0.3.16"
googapis = { version = "0.6.0", features = [
    "google-assistant-embedded-v1alpha2",
] }
log = "0.4.21"
oauth2 = "4.1.0"
pretty_env_logger = "0.5.0"
rfbutton = "0.1.1"
rppal = { version = "0.18.0", features = ["hal"] }
serde = "1.0.203"
toml = "0.8.14"
tokio = { version = "1.38", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
] }
tonic = { version = "0.6.2", features = ["tls"] }

[package.metadata.deb]
# $auto doesn't work because we don't build packages in the same container as we build the binaries.
depends = "libc6"
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/qbutton-pi.toml"]
assets = [
    [
        "target/release/qbutton-pi",
        "usr/bin/",
        "755",
    ],
    [
        "qbutton-pi.example.toml",
        "etc/qbutton-pi.toml",
        "640",
    ],
    [
        "README.md",
        "usr/share/doc/qbutton-pi/",
        "644",
    ],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
